--- a/harakapay-mobile/package.json
+++ b/harakapay-mobile/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^7.4.7",
     "@reduxjs/toolkit": "^2.8.2",
     "@supabase/supabase-js": "^2.55.0",
+    "date-fns": "^4.1.0",
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
