--- a/harakapay-mobile/package.json
+++ b/harakapay-mobile/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^2.55.0",
     "date-fns": "^4.1.0",
     "expo": "~53.0.20",
+    "expo-linear-gradient": "^15.0.7",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
