--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,9 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Claude Code local plugins and config
+.claude/plugins/
+.claude/hooks/
+.claude/.history/
+.claude/.cache/
