--- a/harakapay-mobile/package.json
+++ b/harakapay-mobile/package.json
@@ -15,8 +15,8 @@
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
-    "@reduxjs/toolkit": "^2.8.2",
     "@supabase/supabase-js": "^2.55.0",
+    "@tanstack/react-query": "^5.90.12",
     "date-fns": "^4.1.0",
     "expo": "^54.0.25",
     "expo-linear-gradient": "^15.0.7",
@@ -27,9 +27,7 @@
     "react-native-gesture-handler": "^2.28.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.14.1",
-    "react-native-web": "^0.20.0",
-    "react-redux": "^9.2.0",
-    "redux-persist": "^6.0.0"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
