--- a/harakapay-mobile/package.json
+++ b/harakapay-mobile/package.json
@@ -20,9 +20,12 @@
     "date-fns": "^4.1.0",
     "expo": "^54.0.25",
     "expo-linear-gradient": "^15.0.7",
+    "expo-localization": "^17.0.8",
     "expo-status-bar": "~2.2.3",
+    "i18next": "^25.7.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-i18next": "^16.5.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-safe-area-context": "^5.6.1",
